--- a/src/pages/home/home.module.scss
+++ b/src/pages/home/home.module.scss
@@ -9,7 +9,7 @@
 .main {
   display: grid;
   align-items: normal;
-  gap: 3vw;
+  gap: clamp(1rem, 1rem + 1vh, 2rem) 3vw;
   grid-template: "ingredients" 1fr "summary" auto / 1fr;
   max-inline-size: 100vw;
 }
